--- a/draft/vmp2.tex
+++ b/draft/vmp2.tex
@@ -17,7 +17,7 @@
 
 \vskip 0.5cm \centerline{\bf\Large Vector meson production}
 \centerline{\bf\Large in ultra-peripheral collisions at hadronic colliders}  \vskip 0.3cm
-\centerline{R.~Fiore $^a$, L.~Jenkovszky $^{b\star}$, V.~Libov$^c$, and Magno V. T. Machado$^d$}
+\centerline{R.~Fiore $^a$, L.~Jenkovszky $^{b\star}$, V.~Libov$^{c\diamond}$, and Magno V. T. Machado$^d$}
 
 \vskip 1cm
 
@@ -57,29 +57,29 @@ After the shutdown of HERA, exclusive diffractive production of mesons in ultra-
 For relevant review papers see, e.g. \cite{Review}.
 First results on vector meson production, in particular of $J/\psi$, are already published \cite{LHCb1, LHCb2}.
 
-In this study of vector meson production at the LHC we scrutinize the possible changes in the energy dependence of the cross sections when moving from HERA to the LHC, in particular we are interested the change from "soft" (light vector mesons) to those heavy ($\phi,\ \ J/\psi,\ \ \Upsilon$ {\it etc.}) mesons;
+In this study of vector meson production at the LHC we scrutinize possible changes in the energy dependence of the cross sections when moving from HERA to the LHC, in particular we are interested in the change from "soft" (light vector mesons) to those heavy ($\phi,\ \ J/\psi,\ \ \Upsilon$ {\it etc.}) mesons;
 
 \section{VMP at HERA}
-At HERA VMP was studied in deatails both by the H1 and ZEUS collaboratons. Most of the events were chosen in the 
-kinematical region corresponing to diffractive scattering, which means that the processes can be described by a Pomeron exchange, see Fig. \ref{fig:diagram}. Pomeron dominance is especially clean in $J/\Psi$ production, where,
-by the Zweig (OZI) rule, any exchange of secondary trajectories made of quarks is forbidden, leaving and uncontaminated Pomeron exchange alone.  This does not mean that the dynamics is simple, but we have the opportunigy 
-to scrutinize in this class of reactions the nature of the Pomerone, a complicated and controversial object. 
+At HERA, VMP was studied in details both by the H1 and ZEUS collaborations. Most of the events were chosen in the 
+kinematical region corresponing to diffractive scattering, which means that the processes can be described by a Pomeron exchange, see Fig. \ref{fig:diagrams}. Pomeron dominance is especially clean in $J/\Psi$ production, where,
+by the Zweig (OZI) rule, any exchange of secondary trajectories made of quarks is forbidden, leaving and uncontaminated Pomeron exchange alone.  This does not mean that the dynamics is simple, but we have the opportunity 
+to scrutinize in this class of reactions the nature of the Pomeron, a complicated and controversial object. 
 The main problem is the twin nature of the Pomeron: it seems to be "soft" or "hard" depending on the virtuality of the incident photon and/or mass of the produced vector meson.   
      
-%\begin{figure}[!h]
-%\centering
-% \includegraphics[width=.4\textwidth]{figures/diagrames.eps}
-% \caption{Diagrams of DVCS (a) and VMP (b); (c) DVCS (VMP) amplitude in a Regge-factorized form.}
-% \label{fig:diagrams}
-%\end{figure}
+\begin{figure}[!h]
+\centering
+\includegraphics[width=.8\textwidth]{figures/diagrams.eps}
+\caption{Diagrams of DVCS (a) and VMP (b); (c) DVCS (VMP) amplitude in a Regge-factorized form.}
+\label{fig:diagrams}
+\end{figure}
 
-In most of the papers on the subject the existence of two Pomerons is assumed. One, hard or QCD pomeron, resulting
-from perturbetive quantum chromodynamic calculations, and a soft, somewhat misleadingly called "non-perturbetive". 
-Instead, we believe that there is only one Pomoren in the Nature, but it has two components, whose relative weight is 
+In most of the papers on the subject the existence of two Pomerons is assumed: a hard or QCD pomeron, resulting
+from perturbative quantum chromodynamic calculations, and a soft, somewhat misleadingly called "non-perturbative". 
+Instead, we believe that there is only one Pomeron in Nature, but it has two components, whose relative weight is 
 regulated by relevant $\tilde Q^2$-dependent factors in front of the two, where the measure of the "hardness" $\tilde Q^2=Q^2+M_V^2$ is the sum of the squared photon virtuality and the produced vector meson's mass.  
 
 A specific model realizing this idea was constructed and tested against the experimental data recently (see
-Ref. \cite{FFJS} and earlier references therein. The relevant VMP amplitude reads 
+Ref.~\cite{FFJS} and earlier references therein). The relevant VMP amplitude reads 
   $$
    A(s,t,Q^2,{M_v}^2)= \widetilde{A_s}e^{-i\frac{\pi}{2}\alpha_s(t)}\left(\frac{s}{s_{0}}\right)^{\alpha_s(t)}
     e^{b_st - n_s\ln{\left(1+\frac{\widetilde{Q^2}}{\widetilde{Q_s^2}}\right)}}
@@ -94,10 +94,10 @@ Ref. \cite{FFJS} and earlier references therein. The relevant VMP amplitude read
 stress that the Pomeron is unique in all reactions, just its components (and perameters) change from one reaction
 to another. Examples with detailed fits can be found in recent papers \cite{FFJS}.
 
-The integrated (calle also total) cross VMP cross section can be simply calculated without integration for an exponential diffraction cone according to the formula
-$$\sigma_{el}(s)=\frac{1}{B(s)}\frac{d\sigma}{dt}|_{t=0}.$$ 
+The integrated (also called total) cross VMP cross section can be simply calculated without integration for an exponential diffraction cone according to the formula
+$$\sigma_{el}(s)=\frac{1}{B(s)}\frac{d\sigma}{dt}\biggr\rvert_{t=0.}$$ 
 
-Since our primary goal is the comparison between the energy dependence of VMP at HERA and the LHC, we start with a very simple ans\"atze for the $\gamma p\rightarrow Vp$ cross section, postponing the use of the advanced model  
+Since our primary goal is the comparison between the energy dependence of VMP at HERA and the LHC, we start with a very simple ansatz for the $\gamma p\rightarrow Vp$ cross section, postponing the use of the advanced model  
 Eq. (\ref{eq:Amplitude_FFJS}) to a future study.
 
 \section{VMP at the LHC} 
@@ -122,7 +122,7 @@ Pomeron or Odderon exchange instead of the photon). Finally, the $t$-dependence 
 kept explicit. Extending this parametrization to include a $t-$dependent exponential is easy (see below).
 In any case, $\sigma_{\gamma p\rightarrow Vp}(\tilde Q^2, t, W)$, is well known from HERA.
 
-To start with, we use VMP cross sections integrated in $t$ equvalently, the relevant differential cross section
+To start with, we use VMP cross sections integrated in $t$ equivalently, the relevant differential cross section
 at $t=0$ divided by its foward slope $B$.
 
 %{\tiny\bf (I added  $Q^2$, $t$ as arguments since at this point we haven't yet said explicitely that we consider $t$ %integration.)}
@@ -144,137 +144,150 @@ is the Lorentz factor (Lorentz boost of a single beam), e.g., for pp at the LHC 
 $\gamma_L=3731$.
 %,giving $W_{\gamma p}=960$ GeV.
 Furthermore,
-$\Omega=(\xi ?!)=1+Q_0^2/Q_{min}^2,\  Q_{min}^2=\omega/\gamma_L^2,\   Q_0^2=0.71GeV^2,\   x=M_Ve^{(-y)}/\sqrt s,\  Y\sim\ln(2\omega/m_V)$ is rapidity, $y=Y(?$).
+$\Omega=1+Q_0^2/Q_{min}^2,\  Q_{min}^2=\omega/\gamma_L^2,\   Q_0^2=0.71GeV^2,\   x=M_Ve^{(-y)}/\sqrt s,\  Y\sim\ln(2\omega/m_V)$ is rapidity, $y=Y(?$).
 Furthermore we have: $\Omega=1+Q^2_0/Q^2_{min}$, where $Q_0^2=0.71,\ \ Q_{min}^2=\omega/\gamma^2_L,\ \omega=m_Ve^Y/2$, hence $\Omega_i=1+0.71\gamma_L^2,\ \ \gamma_L^2=7/(2m_p)\approx 3.57, \  \
 m_{V=J/\psi}=3.1, \sqrt{s}=7, \ \alpha_{em}/(2\pi)\approx 10^{-3},$ hence $Q^2_{min}\approx 5.54e^Y,\ \ \Omega=1+3.9e^{-Y}$. For definiteness we fix: a) the colliding particles are protons;
 b) the produced vector meson $V$ is $J/\psi$, and 3) the collision energy $\sqrt s=7$ TeV.
 We comprise the constants in $A=\alpha_{em}/(2\pi),\ \  c=Q_0^2\gamma_L^2$.
-(Notice that the shape of the distribution in $Y$ is very sensitive to the value (and the sign) of the constant $c$!). The $i=\pm$ signs of $\omega$ correspond to the first or second term in Eq. (\ref{1}), respectively, $\omega_{\pm}\sim e^{\pm Y}$.
-
-\section{Results}
+(Note that the shape of the distribution in $Y$ is very sensitive to the value and the sign of the constant $c$).
+The $i=\pm$ signs of $\omega$ correspond to the first or second term in Eq. (\ref{1}), respectively, $\omega_{\pm}\sim e^{\pm Y}$.
 
 \subsection{Corrections for rapidity gap survival probabilities}\label{corrections}
 The above results may be modified by initial and final state interactions,
-alternatively called as rescattering corrections. The calculation of these
+alternatively called as rescattering corrections. Calculation of these
 corrections is by far not unambiguous, the result depending both on the input
 and on the unitarization procedure chosen. The better (more realistic) the input, the smaller the unitarity (rapidity gap survival probability) corrections.
-Since this is a complicated and controversial issue {\it per se} deserving special studies beyond the scope of the present paper, to be coherent with the "common trend", here we use only familiar results from the literature. The standard prescription is to multiply the scattering amplitude (cross section) by a factor (smaller than one), depending on energy and eventually other kinematical variables.
-We borrow the values of these correction factors from Ref.\cite{Ryskin} b), calculated accorging to Eq.(18) and collected in Table 2, both in that paper.
+Since this is a complicated and controversial issue {\it per se} deserving special studies beyond the scope of the present paper, to be coherent with the "common trend", here we use only familiar results from the literature:
+the standard prescription is to multiply the scattering amplitude (cross section) by a factor (smaller than one), depending on energy and eventually other kinematical variables~\cite{Ryskin}.
+In this work we used a constant value of 0.8.
 
-The obtained (corrected) results are shown in Fig... and are compared with the results of our calulations in Sec.\ref{realistic}.
-{\tiny\bf note, the correction of 0.8 was already included in all plots. If it's a constant, I think there is not much sense to reproduce both sets of plots (with and without the correctoin). But we could also try to use a rapidity dependent correction. then it would be interesting to compare.}
+\section{Results}
 
+In this section, theoretical predictions are presented and compared to data.
+Calculations use two models for the exclusive $J/\Psi$ photoproduction cross section, $\sigma_{\gamma p \to J/\Psi}$:
+the simple power-law, $\sigma_{\gamma p \to J/\Psi}\sim W^\delta$, with $\delta=0.8$, and the so-called geometric model.
+The latter model was suggested and applied to deeply virtual Compton scattering (DVCS) in Ref.~\cite{Capua}.
+Apart from $W$ and $t$, it contains alwo dependence on virtuality $Q^2$.
+The model was fitted to the HERA data on DVCS, but it can be applied also to vector meson production (VMP) by refitting its parameters.
+Instead, below we shall use two versions of the so-called Reggeometric model of VMP and DVCS, suggested in Refs. \cite{Fazio}a) and \cite{Fazio}b).
+Its first version \cite{Fazio} a) applies to photoproduction ($Q^2=0$), and the integrated photoproduction cross section, Eq. (11) in Ref. \cite{Fazio}a), is
+\begin{equation}
+\sigma_{\gamma p \to J/\Psi}=A_0^2\frac{(W/W_0)^{4(\alpha_0-1)}}{(1+\tilde Q^2/Q^2_0)^{2n}[4\alpha'\ln(W/W_0)+4\Bigl(\frac{a}{\tilde Q^2}+\frac{b}{2m_N^2}\Bigr)]},
+\end{equation}
+where $\tilde Q^2=Q^2+m_V^2$ and the parameters, fitted \cite{Fazio}a) to $J/\psi$ photoproduction, quoted in
+Table II of Ref. \cite{Fazio}a), are: $A_0=29.8\pm 2.8,\ \ Q_0^2=2.1\pm 0.4,\ \
+n=1.37\pm 0.14,\ \ \alpha_0 =1.20\pm 0.02,\ \ \alpha'=0.17\pm 0.05, a=1.01\pm 0.11,\ \ b=0.44\pm 0.08,\ \ W_0=1$ and relevant dimensions here again are implied.
+Note that compared to the original formula, $s$ was replaced by $W^2$, since $W$ is used in this paper to 
+denote the photon-proton centre-of-mass energy (in contrast, $\sqrt{s}$ in this paper is the proton-proton centre-of-mass energy).
 
-To fix the notation, to quote the basic parameters and to show the difference in the energy ($W$) dependence of the produced vector meson, we start with a simple example containing the standard photon flux and the simplest model for $\sigma(W)\sim W^{0.8}$, without any $t$ or $Q^2$ dependence ({\it i.e.} photoproduction for $t=0$) {\tiny\bf(it is integrated over $t$, not $t=0$, right?)}.
-Fig.~\ref{fig:dSigma_dy_nodata} shows the distribution in rapidity $Y$. Fig.~\ref{fig:dSigma_dW_nodata} shows the energy dependence of $J/\psi$ photoproduction cross section at the LHC ($\sqrt{s}=7$ TeV).
+Figure~\ref{fig:dSigma_dy_nodata} shows the predicted cross sections of $J/\Psi$ production at LHC ($\sqrt{s}=7$ TeV) as a function distribution in rapidity $Y$.
+Generally, the power law and geometric model yield similar distributions,  the latter is flatter though.
+Figure~\ref{fig:dSigma_dW_nodata} shows the $W$-dependence of $J/\psi$ photoproduction cross section.
+Again, two models are generally similar.
+\newpage
 
-\begin{figure}[!h]
+\begin{figure}[!t]
   \centering
   \subfigure[]{\label{fig:dSigma_dy_nodata}
-    \includegraphics[height=5cm]{figures/dSigma_dy_nodata.eps}
+    \includegraphics[height=6.5cm,width=0.46\textwidth]{figures/dSigma_dy_nodata.eps}
   }
   \subfigure[]{\label{fig:dSigma_dW_nodata}
-    \includegraphics[height=5cm]{figures/dSigma_dW_nodata.eps}
+    \includegraphics[height=6.5cm,width=0.46\textwidth]{figures/dSigma_dW_nodata.eps}
   }
-  \caption{Differential cross section of $J/\psi$ production at LHC as a function of rapidity $Y$ (a) and of the photon-proton centre-of-mass energy $W$ (b).}
+  \caption{Differential cross section of exclusive $J/\psi$ production at LHC as a function of rapidity $Y$ (a) and of the photon-proton centre-of-mass energy $W$ (b).
+           The red curves represent the simple power-law parameterisation of the photon-proton cross section, while the blue curves use the geometric model.}
 \end{figure}
 
-The calculated cross sections as a function of rapidity together with the new data from LHC~\cite{LHCb1, LHCb2} are shown in Fig.~\ref{fig:dSigma_dy_comparison1}.
-The photoproduction cross section as a function of $W$ is shown in Fig.~\ref{fig:sigma_gamma_p_W_powerlaw_vs_geometric}.
+The LHCb~\cite{LHCb1, LHCb2} experiment at LHC has recently measured production cross section of $J/\Psi$ as a function of rapidity.
+Fig.~\ref{fig:dSigma_dy_comparison1} shows a comparison of our calculations to these data.
+As can be seen, data are somewhat steeper than both of the curves.
+LHCb also extracted the basic photon-proton photoproduction cross section as a function of $W$ from their rapidity data.
+The result is compared to our predictions in  Fig.~\ref{fig:sigma_gamma_p_W_powerlaw_vs_geometric}.
+Also ZEUS and H1 data are shown.
 
 \begin{figure}[!h]
   \centering
   \subfigure[]{\label{fig:dSigma_dy_comparison1}
-    \includegraphics[height=5cm]{figures/dSigma_dy_comparison1.eps}
+    \includegraphics[height=6.5cm,width=0.46\textwidth]{figures/dSigma_dy_comparison1.eps}
   }
   \subfigure[]{\label{fig:sigma_gamma_p_W_powerlaw_vs_geometric}
-    \includegraphics[height=5cm]{figures/sigma_gamma_p_W_powerlaw_vs_geometric.eps}
+    \includegraphics[height=6.5cm,width=0.46\textwidth]{figures/sigma_gamma_p_W_powerlaw_vs_geometric.eps}
   }
-  \caption{Differential cross section  of $J/\psi$ production  at LHC as a function of rapidity $Y$ (a). $J/\psi$ photoproduction ($\gamma p \to J/\psi p$) cross section as a function photon-proton centre-of-mass energy (b).}
+  \caption{Differential cross section of $J/\psi$ production at LHC as a function of rapidity $Y$ together with LHCb data (a). $J/\psi$ photoproduction ($\gamma p \to J/\psi p$) cross section as a function photon-proton centre-of-mass energy compared
+           with LHCb, ZEUS and H1 data (b).}
 \end{figure}
 
+\subsection{Fitting the power law to LHCb data}
 
-The results are sensitive to the rate of increase of of the photoproduction cross section, {\it i.e.} the power
-$\delta$ in $\sigma(W)\sim W^{delta}$. Below we crutinize this phenomenon by fitting this parameter as well as the normaliztion to the data. For the sake of comparison, a logarithmic paremetrizaton of $\sigma(W)$ is also used.
+As discussed above, LHCb rapidity data have a steeper shape than the predictions.
+Here we investigate the role of the power $\delta$ in the rapidity cross section.
+In particular, we perform a least-squares fit to these data.
+The free parameters are the power $\delta$ and the overall normalization.
+The best fit gives $\delta$=0.37 and is shown in Fig.~\ref{fig:delta_fit}.
+Indeed, the prediction  obtained with this value gives a much better description of the rapidity distribution.
+It is interesting  to compare to other parameterisations, in particular by using the
+logarithimic parameterisation, which is less steep than than the power law.
+This is shown  in Fig.~\ref{fig:all_curves}. The logarithm provides good description as well.
 
-%\subsection{Comments to rapidity cross section}
+The predictions are also compared to the H1 and ZEUS data~\ref{fig:all_curves_w}.
+As can be seen, the geometric model provides the best description.
+Power law with standard $\delta=0.8$ agrees reasonably as well.
+However, the one with $\delta=0.37$, as well as the logarithm fail to describe the data.
 
-\subsubsection{Fitting the power law to LHCb data}
-
-By fitting the power (and normalization)
-a much better description of data can be
-obtained (green curve)
-However, power tends to be very small ($\delta$=0.37)
 \begin{figure}[!h]
 \centering
  \includegraphics[width=.8\textwidth]{figures/dSigma_dy_comparison2.eps}
- \caption{Power law (power+normalization) are fitted to LHCb rapidity data}
+ \caption{Differential cross section of $J/\psi$ production at LHC as a function of rapidity $Y$ together with LHCb data.
+          Both calculations use the simple power law model, with $\delta=0.8$ (red) and $\delta=0.37$ (green).
+          See text for more details.}
+ \label{fig:delta_fit}
 \end{figure}
 
-\clearpage
-\subsubsection{Comparison of all available theory curves}
 \begin{figure}[!h]
 \centering
  \includegraphics[width=.8\textwidth]{figures/dSigma_dy_comparison3.eps}
- \caption{Power law (fitted and 0.8), logarithmic and geometric models compared to LHCb rapidity cross section}
+ \caption{Differential cross section of $J/\psi$ production at LHC as a function of rapidity $Y$ together with LHCb data.
+          Various models for the photon-proton cross section were used: power law with $\delta=0.8$ and $\delta=0.37$ (red and green, respectively),
+          logarithmic parameterisation (pink) and the geometric model (blue).
+          }
+  \label{fig:all_curves}
 \end{figure}
 
-\begin{figure}[!h]
-\centering
- \includegraphics[width=.8\textwidth]{figures/Magno.png}
- \caption{LHCb data compared with theoretical models}
-\end{figure}
+% \begin{figure}[!h]
+% \centering
+%  \includegraphics[width=.8\textwidth]{figures/Magno.png}
+%  \caption{LHCb data compared with theoretical models}
+% \end{figure}
 
 
-\clearpage
-\subsection{Comments on photon-proton cross section}
-Although by going to lower power it is possible to improve LHCb rapidity data, the photon proton cross section becomes clearly not consistent with data.
 \begin{figure}[!h]
 \centering
  \includegraphics[width=.8\textwidth]{figures/sigma_gamma_p_W_all_theory.eps}
- \caption{Power law (fitted and fixed to 0.8), logarithmic and geometric models compared to photon proton cross sections from LHCb and HERA.}
+ \caption{$J/\psi$ photoproduction ($\gamma p \to J/\psi p$) cross section as a function photon-proton centre-of-mass energy compared
+           with LHCb, ZEUS and H1 data. Other details are as in Figure~\ref{fig:all_curves}.}
+ \label{fig:all_curves_w}
 \end{figure}
 
-\section{Prospects}
+\clearpage
+\section{Conclusions and Outlook}
 
-In subsequent sections (papers) we extend the simple model of the previous section, namely:
+In this work, predictions for exclusive $J/\Psi$ meson production at the LHC were presented and compared to recent data from LHCb.
+Predictions for HERA were also shown and compared to H1 and ZEUS data.
+The simple power-law and a more advanced geometric model were used to describe the photon-proton cross section.
+The rapidity data from LHCb are steeper than predictions. A better description can be obtained by tuning the power,
+however this makes the predictions inconsistent with HERA. 
+
+This is only a first look which we plan to extend in the following ways:
 \begin{itemize}
-\item We include $t$ dependence - both exponential (corresopong to linear Regge trajectories) and with deviations from the exponential (from linar Regge trajectories);
-\item In the $\sigma_{\gamma p \rightarrow V p}$ cross section we include, apart from $W$ and $t$ dependence, also $Q$ dependence, negligible in $\gamma-$ but important in Reggeon (Pomeron, Odderon,...) exchanges.
-\item We include corrections due to rapidity gap survival probability.
+\item Inclusion of $t$ dependence - both exponential (corresponding to linear Regge trajectories) and with deviations from the exponential (from linar Regge trajectories);
+\item Dependence of the $\sigma_{\gamma p \rightarrow V p}$ cross section on $Q^2$, negligible in $\gamma-$ but important in Reggeon (Pomeron, Odderon,...) exchanges.
+\item Study of inelastic processes, that is when additional particles are produced due to either gluon radiation and/or (c,d) proton dissociation;
+\item More advanced studies of corrections due to rapidity gap survival probability.
 \end{itemize}
 
-Another simple and efficient model was suggested and applied to deeply virtual Compton scattering (DVCS) in Ref. \cite{Capua}. Apart from $W$ and $t$, it contains alwo dependence on virtuality $Q^2$.
-The model was fitted to the HERA data on DVCS, but it can be applied also to vector meson production (VMP) by refitting its parametes.
-Instead, below we shall use two versions of the so-called Reggeometric model of VMP and DVCS, suggested in Refs. \cite{Fazio}a) and \cite{Fazio}b).
-Its first version \cite{Fazio} a) applies to photoproduction ($Q^2=0$), and the integrated photoproduction cross section, Eq. (11) in Ref. \cite{Fazio}a), is {\bf($s$ was replaced by $W^2$)}
-\begin{equation}
-\sigma_{el}=A_0^2\frac{(s/s_0)^{2(\alpha_0-1)}}{(1+\tilde Q^2/Q^2_0)^{2n}[2\alpha'\ln(s/s_0)+4\Bigl(\frac{a}{\tilde Q^2}+\frac{b}{2m_N^2}\Bigr)]},
-\end{equation}
-where $\tilde Q^2=Q^2+m_V^2$ and the parameters, fitted \cite{Fazio}a) to $J/\psi$ photoproduction, quoted in
-Table II of Ref. \cite{Fazio}a), are: $A_0=29.8\pm 2.8,\ \ Q_0^2=2.1\pm 0.4,\ \
-n=1.37\pm 0.14,\ \ \alpha_0 =1.20\pm 0.02,\ \ \alpha'=0.17\pm 0.05, a=1.01\pm 0.11,\ \ b=0.44\pm 0.08,\ \ s_0=1$ and relevant dimensions here again are implied.
-Fig.~\ref{fig:dSigma_dy_nodata} shows the calculated rapidity distributions for $J/\psi$ production at the LHC while Fig.~\ref{fig:dSigma_dW_nodata} shows the $W$ dependence of the produced $J/\psi$.
+% A more advanced version of the Reggeometric model, Ref. \cite{Fazio}b) includes also $Q^2-$ dependence (electroproduction), the universal "Reggeometric" Pomeron containing two terms, a "hard" and a "soft" one, their relative weight depending on $\tilde Q^2$. Te relevant scattering amplitude is quoted in Eq. (13) of Ref. \cite{Fazio}b) with the fitted parameters collected in Tables 2 to 4 of of the same paper.
 
-A more advanced version of the Reggeometric model, Ref. \cite{Fazio}b) includes also $Q^2-$ dependence (electroproduction), the universal "Reggeometric" Pomeron containing two terms, a "hard" and a "soft" one, their relative weight depending on $\tilde Q^2$. Te relevant scattering amplitude is quoted in Eq. (13) of Ref. \cite{Fazio}b) with the fitted parameters collected in Tables 2 to 4 of of the same paper.
-
-
-\subsection{Pomeron, Odderon and other($\omega, {\it f},...$) Reggeon exchanges}\label{Reggeons}
-
-\subsection{Inelastic photoproduction}
-In this section we study inelastic VMP, where a small number of additional particles are produced due to either gluon radiation and/or (c,d) proton dissociation, see Fig.~\ref{fig:vmp_non_exlcusive}.
-
-\begin{figure}[!h]
-\centering
- \includegraphics[width=.8\textwidth]{figures/non_exclusive_jpsi}
- \caption{Feynman diagrams of non-exclusive $J\psi$ meson production.}
- \label{fig:vmp_non_exlcusive}
-\end{figure}
-
-\section{Conclusions}
-
-\section*{Acknowledgements}
-%\small
+% \section*{Acknowledgements}
 
 \begin{thebibliography}{99}
 \bibitem{LHCb1} LHCb Collab., R. Aaji {\it et al., Exclusive ...}, J. Phys. {\bf G40} (2013) 045001, arXiv:1301.7084.
