Magno's figure back

--- a/draft/vmp2.tex
+++ b/draft/vmp2.tex
@@ -228,8 +228,10 @@ Indeed, the prediction  obtained with this value gives a much better description
 It is interesting  to compare to other parameterisations, in particular by using the
 logarithimic parameterisation, which is less steep than than the power law.
 This is shown  in Fig.~\ref{fig:all_curves}. The logarithm provides good description as well.
+Figure~\ref{fig:dipole} shows, for completeness, predictions from other groups, together with LHCb rapidity data.
+Good description of data is provided.
 
-The predictions are also compared to the H1 and ZEUS data~\ref{fig:all_curves_w}.
+Our predictions are also compared to the H1 and ZEUS data~\ref{fig:all_curves_w}.
 As can be seen, the geometric model provides the best description.
 Power law with standard $\delta=0.8$ agrees reasonably as well.
 However, the one with $\delta=0.37$, as well as the logarithm fail to describe the data.
@@ -243,7 +245,7 @@ However, the one with $\delta=0.37$, as well as the logarithm fail to describe t
  \label{fig:delta_fit}
 \end{figure}
 
-\begin{figure}[!h]
+\begin{figure}[p]
 \centering
  \includegraphics[width=.8\textwidth]{figures/dSigma_dy_comparison3.eps}
  \caption{Differential cross section of $J/\psi$ production at LHC as a function of rapidity $Y$ together with LHCb data.
@@ -253,14 +255,17 @@ However, the one with $\delta=0.37$, as well as the logarithm fail to describe t
   \label{fig:all_curves}
 \end{figure}
 
-% \begin{figure}[!h]
-% \centering
-%  \includegraphics[width=.8\textwidth]{figures/Magno.png}
-%  \caption{LHCb data compared with theoretical models}
-% \end{figure}
+\begin{figure}[p]
+\centering
+ \includegraphics[width=.8\textwidth]{figures/Magno.png}
+ \caption{Differential cross section of $J/\psi$ production at LHC as a function of rapidity $Y$ together with LHCb data.
+         Taken from~\ref{LHCb2}.}
+ \label{fig:dipole}
+\end{figure}
 
+\clearpage
 
-\begin{figure}[!h]
+\begin{figure}[!t]
 \centering
  \includegraphics[width=.8\textwidth]{figures/sigma_gamma_p_W_all_theory.eps}
  \caption{$J/\psi$ photoproduction ($\gamma p \to J/\psi p$) cross section as a function photon-proton centre-of-mass energy compared
@@ -268,7 +273,6 @@ However, the one with $\delta=0.37$, as well as the logarithm fail to describe t
  \label{fig:all_curves_w}
 \end{figure}
 
-\clearpage
 \section{Conclusions and Outlook}
 
 In this work, predictions for exclusive $J/\Psi$ meson production at the LHC were presented and compared to recent data from LHCb.
