--- a/draft/TMF_27_07.tex
+++ b/draft/TMF_27_07.tex
@@ -57,16 +57,16 @@ $
 
 \section{Introduction}\label{Int}
 
-Following the shut-down of the HERA collider at DESY (Hamburg), exclusive diffractive production of vector mesons in ultra-peripheral collisions of protons and nuclei became among the priorities of the present and future studies at the LHC \cite{LHCb1, LHCb2}, triggering a large number of theoretical investigations \cite{Schafer, Brazil, Ryskin, Motyka, Szczurek}.
+Following the shut-down of the HERA collider at DESY (Hamburg), exclusive diffractive production of vector mesons in ultra-peripheral collisions of protons and nuclei became among the priorities of the present and future studies at the CERN LHC \cite{LHCb1, LHCb2, LHCA_ATLAS}, triggering a large number of theoretical investigations \cite{Schafer, Brazil, Ryskin, Motyka, Szczurek}.
 For a relevant review paper see, e.g., Ref.~ \cite{Review}.
-First results on vector meson production (VMP), in particular of $J/\psi$, are already published \cite{LHCb1, LHCb2}.
+First results on vector meson production (VMP), in particular on $J/\psi$, are already published \cite{LHCb1, LHCb2}.
 
 In this study of VMP at the CERN LHC we scrutinize possible changes in the energy dependence of the cross sections when moving from HERA to the LHC, in particular we are interested in the change from light vector mesons to heavy vector mesons ($\phi,\  J/\psi,\  \Upsilon$,  {\it etc.}).
 
 \section{VMP at HERA}
 At HERA, VMP was studied in details both by the H1 and ZEUS collaborations. Most of the events were chosen in the 
 kinematical region corresponding to diffractive scattering, which means that the processes can be described by a Pomeron exchange (see Fig. \ref{fig:diagrams}). Pomeron dominance is especially clean in $J/\Psi$ production, where,
-by the Zweig (OZI) rule, any exchange of secondary trajectories made of quarks is forbidden, thus leaving alone the uncontaminated Pomeron exchange.  This does not mean that the dynamics is simple, but we have the opportunity 
+by the Zweig (OZI) rule, any exchange of secondary trajectories, made of quarks, is forbidden, thus leaving alone the uncontaminated Pomeron exchange.  This does not mean that the dynamics is simple, but we have the opportunity 
 to study in this class of reactions the nature of the Pomeron, a complicated and controversial object. 
 The main problem is the twin nature of the Pomeron: it seems to be ``soft" or ``hard" depending on the virtuality of the incident photon and/or the mass of the produced vector meson.   
      
@@ -94,7 +94,7 @@ Ref.~\cite{FFJS} and earlier references therein). The relevant VMP amplitude rea
     +\ln{\left(\frac{\widetilde{Q^2}}{\widetilde{Q_h^2}}\right)} },
     \label{eq:Amplitude_FFJS}
     \end{equation}
- where  $\alpha_s(t)$ and and $\alpha_h(t)$ are the soft and hard Pomeron trajectories, $s=W^2$, $W$ being the energy of the VMP. Let us 
+ where  $\alpha_s(t)$ and $\alpha_h(t)$ are the soft and hard Pomeron trajectories, $s=W^2$, $W$ being the energy of the VMP. Let us 
 stress that the Pomeron is unique in all reactions, but its components (and parameters) vary. 
 Examples with detailed fits can be found in the papers of Ref.~\cite{FFJS}.
 
@@ -111,7 +111,7 @@ can be simply calculated, without integration for an exponential diffraction con
 \end{equation}
 where $B$ is the forward slope. 
 
-Since our primary goal is the comparison between the energy dependence of VMP at HERA and the LHC, we start with a very simple ans\"atz for the $\gamma p\rightarrow Vp$ cross section, postponing the use of the advanced model given by  
+Since our primary goal is the comparison between the energy dependence of VMP at HERA and the LHC, we start with very simple ans\"atz for the $\gamma p\rightarrow Vp$ cross section, postponing the use of the advanced model given by  
 Eq. (\ref{eq:Amplitude_FFJS}) to a future study.
 
 \section{VMP at the LHC} 
@@ -128,16 +128,17 @@ The distribution in the rapidity $Y$ of the production of a vector meson $V$ in 
  \label{fig:vmp_feynman}
 \end{figure}
 
-Generally speaking, the $\gamma p$ cross section depends on three variables: the total energy   of the $\gamma p$ system, $W$, 
+Generally speaking, the $\gamma p$ differential cross section depends on three variables: the total energy   of the $\gamma p$ system, $W$, 
 the squared momentum transfer at the proton vertex, $t$, and $\widetilde Q^2=Q^2+M_V^2$, where, as previously said, $Q^2$ is the photon virtuality and $M_V$ is the mass of the produced vector meson. Since, by definition, in ultra-peripheral collisions we have $b>>R_1+R_2$, where $b$ is the impact parameter, i.e. the closest distance between the centres of the colliding particles/nuclei with radii  $R_i$ (i = 1,2),
-photons are nearly real, $Q^2 \simeq 0$, and $M_V^2$ remains the only measure of  ``hardness". Notice that this might not be true for peripheral collisions, where $b\sim R_1+R_2$, and in the 
+photons are nearly real, $Q^2 \simeq 0$, and $M_V^2$ remains the only measure of ``hardness". Notice that this might not be true for peripheral collisions, where $b\sim R_1+R_2$, and in the 
 Pomeron or Odderon exchange instead of the photon. Finally, the $t$-dependence (shape of the diffraction cone) is known to be nearly exponential. It can be either integrated, or
 kept explicit. Extending this parametrization to include a $t-$dependent exponential is easy (see below).
-As for the total cross section $\sigma_{\gamma p\rightarrow Vp}(\widetilde Q^2, t, W)$, it is well known from HERA. 
+Concerning total cross section $\sigma_{\gamma p\rightarrow Vp}(\widetilde Q^2, t, W)$, it is well known from HERA. 
 %It is equivalent to the differential cross section $d\sigma_{\gamma p\rightarrow Vp}(\widetilde Q^2, t, W)/dt$ at $t=0$ divided by its forward slope $B$.
 %{\tiny\bf (I added  $Q^2$, $t$ as arguments since at this point we haven't yet said explicitely that we consider $t$ %integration.)}
+
 We use a simple parametrization of the $\sigma_{\gamma p\rightarrow Vp}(W)$ cross section, 
-suggested by Donnachie and Landshoff \cite{DL}: $\sigma_{\gamma p\rightarrow Vp}(W)\sim W^{\delta},\ \delta\approx 0.8$ (more involved models, e.g. of Ref. \cite{FFJS, Capua} will be considered below).
+suggested by Donnachie and Landshoff \cite{DL}: $\sigma_{\gamma p\rightarrow Vp}(W)\sim W^{\delta},\ \delta\approx 0.8$ (more involved models, e.g. of Ref. \cite{FFJS, Capua} will be considered elsewhere).
 
 The differential cross section as function of the rapidity $Y$ reads
  $$
@@ -155,7 +156,7 @@ where $\frac{dN_{\gamma/h}(\omega)}{d\omega}$ is the ``equivalent" photon flux \
 and $\sigma_{\gamma p\rightarrow Vp}(\omega)$ is the total cross section of the vector meson photoproduction subprocess (the same as e.g. at HERA, see Ref. \cite{Capua}). 
 Here $\omega$ is the photon energy, $\omega=W^2_{\gamma p}/2\sqrt s$, where $\sqrt s$ denotes now the c.m.s. energy of the  proton-proton system; 
 $\omega_{min}=M_V^2/(4\gamma_Lm_p),$ where $\gamma_L=\sqrt s/(2m_p)$
-is the Lorentz factor (Lorentz boost of a single beam); e.g., for pp at the LHC for $\sqrt{s}=7$~TeV,
+is the Lorentz factor (Lorentz boost of a single beam); e.g., for $pp$ at the LHC for $\sqrt{s}=7$~TeV,
 $\gamma_L=3731$.
 %,giving $W_{\gamma p}=960$ GeV.
 Furthermore,
@@ -181,12 +182,12 @@ In this work we used the constant value of 0.8.
 \section{Results of the fitting procedure}
 
 In this Section theoretical predictions are presented and compared to experimental data.
-Calculations use two models for the exclusive $J/\Psi$ photoproduction cross section, $\sigma_{\gamma p \to J/\Psi}$:
+IN our alculations we use two models for the exclusive $J/\Psi$ photoproduction cross section, $\sigma_{\gamma p \to J/\Psi}$:
 the simple power-law, $\sigma_{\gamma p \to J/\Psi}\sim W^\delta$, with $\delta=0.8$, and the so-called Reggeometric model.
-The latter model, in its first version, was suggested and applied to the deeply virtual Compton scattering (DVCS) in Ref.~\cite{Capua}.
-Apart from $W$ and $t$, it contains also the dependence on the virtuality $Q^2$.
+The latter, in its first version, was suggested and applied to deeply virtual Compton scattering (DVCS) in Ref.~\cite{Capua}.
+Apart from $W$ and $t$, it contains also the dependence on virtuality, $Q^2$.
 The model was fitted to the HERA data on DVCS, but it can be applied also to the VMP by refitting its parameters.
-In this paper we shall use the first (simpler) version of the two versions of the Reggeometric model of VMP and DVCS, suggested in Ref. \cite{FFJS}.
+In this paper we use the first (simpler) version of the Reggeometric model of VMP and DVCS, suggested in Ref. \cite{FFJS}.
 
 \subsection{Fitting the  Reggeometric model to LHCb data}
 
@@ -200,8 +201,8 @@ n=1.37\pm 0.14,\ \ \alpha_0 =1.20\pm 0.02,\ \ \alpha'=0.17\pm 0.05, a=1.01\pm 0.
 Note that compared to the original formula, $s$ was replaced by $W^2$, since $W$ is used in this paper to 
 denote the photon-proton centre-of-mass energy (in contrast, $\sqrt{s}$ in this paper is the proton-proton centre-of-mass energy).
 
-Fig.~\ref{fig:dSigma_dy_nodata} shows the predicted differential cross section of the $J/\Psi$ production at LHC ($\sqrt s=7$ TeV) as a function distribution in the rapidity $Y$.
-Generally, the power law and the Reggeometric model yield similar distributions,  the latter is flatter though.
+Fig.~\ref{fig:dSigma_dy_nodata} shows the predicted differential cross section of the $J/\Psi$ production at LHC ($\sqrt s=7$ TeV) as a distribution in rapidity $Y$.
+On the whole, the power law and the Reggeometric model yield similar distributions,  the latter is flatter though.
 Fig.~\ref{fig:dSigma_dW_nodata} shows the $W$-dependence of $J/\psi$ photoproduction differential cross section.
 Again, the two models give generally similar behaviours.
 \newpage
@@ -237,7 +238,7 @@ Also the ZEUS and H1 data are shown.
            with the LHCb, ZEUS and H1 data .}
 \end{figure}
 
-\subsection{Fitting the power law to LHCb data}
+\subsection{Fitting the power law to the LHCb data}
 
 As discussed above, the LHCb rapidity data have a steeper shape than our predictions.
 Here we investigate the role of the power $\delta$ in the rapidity cross section.
@@ -249,7 +250,7 @@ It is interesting make a comparison with other parameterizations, in particular 
 logarithmic parameterization, which leads to a less steep line than that obtained in the power law case .
 This is shown  in Fig.~\ref{fig:all_curves}. The logarithmic parameterization provides a good description as well.
 Fig.~\ref{fig:dipole} shows, for completeness, the predictions obtained from other groups, together with the LHCb rapidity data.
-The description of data is reasonable.
+The agreement with the data is reasonable.
 
 Our predictions for the $J/\Psi$ photoproduction, also compared to the H1 and ZEUS data, are shown in Fig.~\ref{fig:all_curves_w}.
 As it can be seen, the Reggeometric model provides the best description.
@@ -259,7 +260,7 @@ However, the one with $\delta=0.37$, as well as the logarithmic parameterization
 \begin{figure}[!h]
 \centering
  \includegraphics[width=.8\textwidth]{figures/dSigma_dy_comparison2.eps}
- \caption{Differential cross section of $J/\psi$ production at LHC as function of the rapidity $Y$, according to the power law  together with LHCb data.
+ \caption{Differential cross section of $J/\psi$ production at the LHC as function of the rapidity $Y$, according to the power law  together with LHCb data.
           Both calculations use the simple power law model, with $\delta=0.8$ (red line) and $\delta=0.37$ (green line).}
  \label{fig:delta_fit}
 \end{figure}
@@ -267,7 +268,7 @@ However, the one with $\delta=0.37$, as well as the logarithmic parameterization
 \begin{figure}[p]
 \centering
  \includegraphics[width=.8\textwidth]{figures/dSigma_dy_comparison3.eps}
- \caption{Differential cross section of $J/\psi$ production at LHC as a function of rapidity $Y$, according to the various models for the photon-proton cross section used: power law with $\delta=0.8$ and $\delta=0.37$ (red and green lines, respectively), logarithmic parameterization (pink line) and the Reggeometric model (blue line). Also the LHCb data are shown.}
+ \caption{Differential cross section of $J/\psi$ production at the LHC as a function of rapidity $Y$, according to the various models for the photon-proton cross section used: power law with $\delta=0.8$ and $\delta=0.37$ (red and green lines, respectively), logarithmic parameterization (pink line) and the Reggeometric model (blue line). Also the LHCb data are shown.}
   \label{fig:all_curves}
 \end{figure}
 
@@ -288,10 +289,10 @@ However, the one with $\delta=0.37$, as well as the logarithmic parameterization
  \label{fig:all_curves_w}
 \end{figure}
 
-\section{Conclusions and Outlook}
+\section{Conclusions and Outlooks}
 
 In this paper predictions for exclusive $J/\Psi$ meson production in ultra-peripheral collisions at the LHC are presented and compared with the recent experimental data collected by the LHCb.
-Predictions for the HERA  experimental data are also shown and compared with the H1 and ZEUS data.
+The HERA  experimental data are also shown and compared with the H1 and ZEUS measurements.
 The simple power-law and a more advanced geometric model, the so called Reggeometric model, were used to describe the photon-proton cross section.
 The LHCb for the cross section as a function of the rapidity are steeper than predictions. A better description can be obtained by tuning the power,
 however this makes the predictions inconsistent with the HERA data. 
@@ -302,13 +303,14 @@ The present study will be extended by
 (non-linear Regge trajectories);
 \item the inclusion of the dependence of the $\sigma_{\gamma p \rightarrow V p}$ cross section on $Q^2$, negligible in $\gamma-$ but important in the case of Reggeon (Pomeron, Odderon,...) exchanges;
 \item studies of inelastic processes, i.e. those in which additional particles are produced due to either gluon radiation and/or (c,d) proton dissociation;
-\item more advanced studies of corrections due to the rapidity gap survival probability.
+\item more advanced studies of corrections due to the rapidity gap survival probability;
+\item generalizations to include nuclear collitions.
 \end{itemize}
 
 % A more advanced version of the Reggeometric model, Ref. \cite{Fazio}b) includes also $Q^2-$ dependence (electroproduction), the universal "Reggeometric" Pomeron containing two terms, a "hard" and a "soft" one, their relative weight depending on $\tilde Q^2$. Te relevant scattering amplitude is quoted in Eq. (13) of Ref. \cite{Fazio}b) with the fitted parameters collected in Tables 2 to 4 of of the same paper.
 
  \section*{Acknowledgements}
-L.J. thanks the Dipartimento di Fisica dell'Universit`a della Calabria and the Istituto Nazionale di Fisica Nucleare - Gruppo Collegato di Cosenza, where part of this work was done, for their hospitality and support. 
+We thank A. Salii for discussions. L.J. is grateful to the Dipartimento di Fisica dell'Universit`a della Calabria and the Istituto Nazionale di Fisica Nucleare - Gruppo Collegato di Cosenza, where part of this work was done, for their hospitality and support. 
 He was supported also by the grant "Matter under extreme conditions" of the
 National Academy of Sciences of Ukraine, Dept. of Astronomy and
 Physics and by the DOMUS Curatorium of the Hungarian Academy of Sciences.
@@ -317,6 +319,8 @@ Physics and by the DOMUS Curatorium of the Hungarian Academy of Sciences.
 \bibitem{LHCb1} LHCb Collab., R. Aaij, J. Phys. {\bf G40} (2013) 045001, arXiv:1301.7084.
 
 \bibitem{LHCb2}  LHCb Collab., R. Aaij, J. Phys. {\bf G41} (2014) 055002, arXiv:1401.3288.
+
+\bibitem{LHC_ATLAS} ATLAS Collab., CERN-PH-EP-2014-095; arXiv:1407.5535.
 
 \bibitem{Schafer} A. Sch\"afer, L. Mankiewicz, and O. Nachtmann, Phys. Lett. {\bf B272} (1991) 419.
 
