--- a/draft/TMF_27_07.tex
+++ b/draft/TMF_27_07.tex
@@ -57,7 +57,7 @@ $
 
 \section{Introduction}\label{Int}
 
-Following the shut-down of the HERA collider at DESY (Hamburg), exclusive diffractive production of vector mesons in ultra-peripheral collisions of protons and nuclei became among the priorities of the present and future studies at the CERN LHC \cite{LHCb1, LHCb2, LHCA_ATLAS}, triggering a large number of theoretical investigations \cite{Schafer, Brazil, Ryskin, Motyka, Szczurek}.
+Following the shut-down of the HERA collider at DESY (Hamburg), exclusive diffractive production of vector mesons in ultra-peripheral collisions of protons and nuclei became among the priorities of the present and future studies at the CERN LHC \cite{LHCb1, LHCb2, LHC_ATLAS}, triggering a large number of theoretical investigations \cite{Schafer, Brazil, Ryskin, Motyka, Szczurek}.
 For a relevant review paper see, e.g., Ref.~ \cite{Review}.
 First results on vector meson production (VMP), in particular on $J/\psi$, are already published \cite{LHCb1, LHCb2}.
 
