--- a/draft/arXiv.tex
+++ b/draft/arXiv.tex
@@ -163,6 +163,7 @@ Furthermore,
 $\Omega=1+Q_0^2/Q_{min}^2,$ with  $Q_{min}^2=(\omega/\gamma_L)^2$ and  $Q_0^2=0.71 GeV^2$,  
 $Y\sim\ln(2\omega/M_V)$.  
 %x=M_Ve^{(-y)}/\sqrt s,\  
+The differential cross section in $W$ can be calculated as $d\sigma/dW=(d\sigma/dY)/W$.
 
 For definiteness we fix: a) the colliding particles are protons;
 b) the produced vector meson $V$ is $J/\psi$, and 3) the collision energy $\sqrt s=7$ TeV.
@@ -193,7 +194,7 @@ In this paper we use the first (simpler) version of the Reggeometric model of VM
 
 The first version of the Reggeometric model \cite{FFJS} a) applies to photoproduction ($Q^2=0$). The total photoproduction cross section, Eq. (11) in Ref. \cite{FFJS} a), is given by 
 \begin{equation}
-\sigma_{\gamma p \to J/\Psi}=A_0^2\frac{(W/W_0)^{4(\alpha_0-1)}}{(1+\tilde Q^2/Q^2_0)^{2n}[4\alpha'\ln(W/W_0)+4\Bigl(\frac{a}{\tilde Q^2}+\frac{b}{2m_N^2}\Bigr)]},
+\sigma_{\gamma p \to J/\Psi p}=A_0^2\frac{(W/W_0)^{4(\alpha_0-1)}}{(1+\tilde Q^2/Q^2_0)^{2n}[4\alpha'\ln(W/W_0)+4\Bigl(\frac{a}{\tilde Q^2}+\frac{b}{2m_N^2}\Bigr)]},
 \end{equation}
 where $\widetilde Q^2=Q^2+M_V^2$. The parameters, fitted \cite{FFJS} a) to the $J/\psi$ photoproduction, quoted in
 Table II of Ref. \cite{FFJS} a), are: $A_0=29.8\pm 2.8,\ \ Q_0^2=2.1\pm 0.4,\ \
