added psi2S figure to the draft

--- a/draft/arXiv.tex
+++ b/draft/arXiv.tex
@@ -290,6 +290,13 @@ However, the one with $\delta=0.37$, as well as the logarithmic parameterization
  \label{fig:all_curves_w}
 \end{figure}
 
+\begin{figure}[!ht]
+\centering
+ \includegraphics[width=.8\textwidth]{figures/dSigma_dy_psi2S.eps}
+ \caption{$\Psi(2S)$ differential cross section as a function of rapidity $Y$ compared with the LHCb data. The power law model was used with parameters as shown in the figure.}
+ \label{fig:all_curves_w}
+\end{figure}
+
 \section{Conclusions and Outlooks}
 
 In this paper predictions for exclusive $J/\Psi$ meson production in ultra-peripheral collisions at the LHC are presented and compared with the recent experimental data collected by the LHCb.
