--- a/draft/arXiv.tex
+++ b/draft/arXiv.tex
@@ -34,7 +34,7 @@ National Academy of Sciences of Ukraine} \centerline{\sl Kiev,
 
 \begin{abstract}\noindent
 By using a Regge-pole model for vector meson production (VMP), successfully describing the HERA data, we analyse the correlation between VMP cross sections in photon-induced reactions at HERA and those in ultra-peripheral collisions at the Large Hadron Collider (LHC).
-Predictions for future experiments on production of $J/\psi$ and other vector mesons are presented.
+Predictions for future experiments on production of $J/\psi$ and $\psi(2S)$ are presented.
 \end{abstract}
 
 \vskip 0.1cm
@@ -58,7 +58,7 @@ $
 \section{Introduction}\label{Int}
 
 Following the shut-down of the HERA collider at DESY (Hamburg), exclusive diffractive production of vector mesons in ultra-peripheral collisions of protons and nuclei became among the priorities of the present and future studies at the CERN LHC \cite{LHCb1, LHCb2, LHC_ATLAS}, triggering a large number of theoretical investigations \cite{Schafer, Brazil, Ryskin, Motyka, Szczurek}.
-For a relevant review paper see, e.g., Ref.~ \cite{Review}.
+For a relevant review paper see, e.g., Ref.~\cite{Review}.
 First results on vector meson production (VMP), in particular on $J/\psi$, are already published \cite{LHCb1, LHCb2}.
 
 In this study of VMP at the CERN LHC we scrutinize possible changes in the energy dependence of the cross sections when moving from HERA to the LHC, in particular we are interested in the change from light vector mesons to heavy vector mesons ($\phi,\  J/\psi,\  \Upsilon$,  {\it etc.}).
@@ -202,11 +202,10 @@ n=1.37\pm 0.14,\ \ \alpha_0 =1.20\pm 0.02,\ \ \alpha'=0.17\pm 0.05, a=1.01\pm 0.
 Note that compared to the original formula, $s$ was replaced by $W^2$, since $W$ is used in this paper to 
 denote the photon-proton centre-of-mass energy (in contrast, $\sqrt{s}$ in this paper is the proton-proton centre-of-mass energy).
 
-Fig.~\ref{fig:dSigma_dy_nodata} shows the predicted differential cross section of the $J/\Psi$ production at LHC ($\sqrt s=7$ TeV) as a distribution in rapidity $Y$.
+Fig.~\ref{fig:dSigma_dy_nodata} shows the predicted differential cross section of $J/\Psi$ production at LHC ($\sqrt s=7$ TeV) as a distribution in rapidity $Y$.
 On the whole, the power law and the Reggeometric model yield similar distributions,  the latter is flatter though.
 Fig.~\ref{fig:dSigma_dW_nodata} shows the $W$-dependence of $J/\psi$ photoproduction differential cross section.
 Again, the two models give generally similar behaviours.
-\newpage
 
 \begin{figure}[!t]
   \centering
@@ -235,8 +234,8 @@ Also the ZEUS and H1 data are shown.
   \subfigure[]{\label{fig:sigma_gamma_p_W_powerlaw_vs_geometric}
     \includegraphics[height=6.5cm,width=0.46\textwidth]{figures/sigma_gamma_p_W_powerlaw_vs_geometric.eps}
   }
-  \caption{The differential cross section of the $J/\Psi$ production at LHC as a function of the rapidity $Y$ together with the LHCb data is shown in plot (a). Also shown, in plot (b), is the $J/\Psi$ photoproduction ($\gamma p \to J/\Psi p$) cross section as a function of the photon-proton c.m.s. energy compared
-           with the LHCb, ZEUS and H1 data .}
+  \caption{The differential cross section of $J/\Psi$ production at LHC as a function of the rapidity $Y$ together with the LHCb data is shown in plot (a). Also shown, in plot (b), is the $J/\Psi$ photoproduction ($\gamma p \to J/\Psi p$) cross section as a function of the photon-proton c.m.s. energy compared
+           with the LHCb, ZEUS and H1 data.}
 \end{figure}
 
 \subsection{Fitting the power law to the LHCb data}
@@ -257,6 +256,8 @@ Our predictions for the $J/\Psi$ photoproduction, also compared to the H1 and ZE
 As it can be seen, the Reggeometric model provides the best description.
 The power law with the standard $\delta=0.8$ agrees reasonably as well.
 However, the one with $\delta=0.37$, as well as the logarithmic parameterization fail to describe the data.
+
+$\Psi(2S)$ differential cross section as a function of rapidity $Y$ is compared with the LHCb data in Fig.~\ref{fig:psi2s}. The power law model was used with parameters as obtained from the fit. Good description is observed.
 
 \begin{figure}[!h]
 \centering
@@ -294,7 +295,7 @@ However, the one with $\delta=0.37$, as well as the logarithmic parameterization
 \centering
  \includegraphics[width=.8\textwidth]{figures/dSigma_dy_psi2S.eps}
  \caption{$\Psi(2S)$ differential cross section as a function of rapidity $Y$ compared with the LHCb data. The power law model was used with parameters as shown in the figure.}
- \label{fig:all_curves_w}
+ \label{fig:psi2s}
 \end{figure}
 
 \section{Conclusions and Outlooks}
