--- a/code_from_oleg/description/main.tex
+++ b/code_from_oleg/description/main.tex
@@ -43,19 +43,23 @@ $$
 $$
 
 $$
-\Im\alpha(s) = \sum_{i=0}^{2} s^\delta c_i (1-s_i/s)^(Re\ \alpha(s_i)) \theta(s-s_i) 
+\Im\alpha(s) = \sum_{j=0}^{2} s^\delta c_i (1-s_i/s)^{\Re\alpha(s_i)} \theta(s-s_i) 
 $$
 
 $$
-c_1=  0.508309,
-c_2 = 4.01083,
-c_3 = 4558.44.
+c_0=  0.508309,
+c_1 = 4.01083,
+c_2 = 4558.44.
 $$
   
 $$
-s_1=  1.151,
-s_2 = 2.44,
-s_3 = 11.7.
+s_0=  1.151,
+s_1 = 2.44,
+s_2 = 11.7.
+$$
+
+$$
+\delta=-0.460021
 $$
 
 Kinematic factor:
