--- a/code_from_oleg/description/main.tex
+++ b/code_from_oleg/description/main.tex
@@ -39,15 +39,15 @@ $$
 $$
 
 $$
-\Im A(M_X^2,t) = \sum_{j=0}^{2}\frac{1}{(1. - t/0.71)^{4(j+2)}} \frac{\Im\alpha(M_X^2)}{(2 j+2.5-\Re\alpha(M_X^2))^2+(\Im\alpha(M_X^2))^2}
+\Im A(M_X^2,t) = \sum_{n=1}^{3}\frac{1}{(1. - t/0.71)^{4(n+1)}} \frac{\Im\alpha(M_X^2)}{(2 n +0.5-\Re\alpha(M_X^2))^2+(\Im\alpha(M_X^2))^2}
 $$
 
 $$
-\Im\alpha(s) = \sum_{j=0}^{2} s^\delta c_i (1-s_i/s)^{\Re\alpha(s_i)} \theta(s-s_i) 
+\Im\alpha(s) = s^\delta \sum_{j=0}^{2} c_i (1-s_i/s)^{\Re\alpha(s_i)} \theta(s-s_i) 
 $$
 
 $$
-\Re\alpha(s) =  \alpha_0 + \frac{1}{\pi} \sum_{j=0}^{2} s c_i (\frac{\Gamma(1-\delta) \Gamma(1+\lambda_i)}{\Gamma(\lambda_i-\delta+2) s_i^{1-\delta}} f21 \theta(s_i-s) + (\pi s^{\delta-1} \left(\frac{s-s_i}{s}\right)^{\lambda_i} \frac{1}{\tan{\pi (1-\delta)}} - GGGsf21) \theta(s-s_i))
+\Re\alpha(s) =  \alpha_0 + \frac{s}{\pi} \sum_{j=0}^{2} c_i (\frac{\Gamma(1-\delta) \Gamma(1+\lambda_i)}{\Gamma(\lambda_i-\delta+2) s_i^{1-\delta}} f21 \theta(s_i-s) + (\pi s^{\delta-1} \left(\frac{s-s_i}{s}\right)^{\lambda_i} \frac{1}{\tan{\pi (1-\delta)}} - GGGsf21) \theta(s-s_i))
 $$
 
 $$
